k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kardamom
  labels:
    app.kubernetes.io/name: kardamom
